# pro.cardesign

./: .coverage  .eslintrc.json  .gitattributes  .gitignore  .temp_mesh.txt  AGENTS.md  BUILD_GUIDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DOCUMENTAZIONE_TOTALE.md  DOCUMENTAZIONE_UNIFICATA.md  FIX_SUMMARY.md  INJECT_INIT.ps1  LICENSE  MESHY_STYLE_PROGRAM_IDEA.md  PIANO_SVILUPPO_COMPLETO.md  PROJECT_CHECKLIST.md  README.md  _4c42e13_source.js  _brace_stack.js  _compare_both.js  _dcheck.js  _deep_struct.js  _depth_trace.js  _diff_analysis.js  _fde2b0e_struct.js  _fde2b0e_ve.js  _fde_view.js  _final_depth.js  _find_methods.js  _fvm.js  _head_trace.js  _head_ve_current.js  _inspect_old.js  _old_l499.js  _trace_depths.js  _trace_v2.js  analyze_voxel_engine.py  (+75 more)
.kilo/plans/: 1778769721661-witty-moon.md  1778857565453-gentle-nebula.md  1779010431342-gentle-panda.md  1779031061930-curious-circuit.md  1779045605819-cosmic-wizard.md  1779354407512-eager-panda.md  1779787643595-kind-rocket.md  1779907253208-quick-engine.md  1779993638566-tidy-tiger.md  1780035146531-lucky-engine.md  (+1 more)
ARCHIVIO_DOCS/: ARCHITETTURA_VOXEL_PROCEDURALE_AI.md.bak  PIANO_SVILUPPO_COMPLETO.md.bak
_deprecated/: ascii_viewer.py  mesh_utils.py  physics_sim.py  run_server.py  simple_server.py
ai_engine/: __init__.py  nl_parser.py
ai_pipeline/: __init__.py  depth_estimator.py  mesh_builder.py  multiview.py  pipeline.py  point_cloud.py  segmenter.py  segmenter_sam2.py  symmetric_reconstruction.py  text_generator.py  trellis_integration.py  voxelizer.py
backend/: __init__.py
build3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  VoxelEngine.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  voxelengine.vcxproj  voxelengine.vcxproj.filters
cad_export/: __init__.py
core/: __init__.py  bike_demo.py  brick.py  component.py  hole.py  test_brick.py
datasets/: automotive_components.json
examples/: 01_spoiler_box.py
geometry/: MeshoptDecimator.js  MeshoptWorker.js  MeshoptWorkerManager.js  OptimizedBoolean.js
geometry_core/: __init__.py  load_into_project.py  parametric_generator_review.py
mesh_generator/: __init__.py
python/: init.py  test_voxel.py
scripts/: download-models.ps1  test-geometry.cmd
servizi/: api.py
src/: main.js  material-system.js  mc-tables.mjs  mesh-exporter-mc-stub.txt  mesh-exporter.js  mesh-exporter.js.backup  module-system.js  physics-calc.js  physics_c_api.cpp  physics_wrapper.py  ui.js  voxel-engine.js
styles/: main.css
tests/: COVERAGE_REPORT.md  README.md  _debug_boolean.js  _debug_csg.js  _test_boolean_debug.cjs  _test_boolean_v2.cjs  patch-three-imports.js  test_ai_pipeline.py  test_brick_overlap_edge_cases.py  test_coverage.js  test_coverage.py  test_coverage_mocks.js  test_depth_estimation.js  test_depth_estimation_e2e.js  test_symmetric_reconstruction.js  test_visualization.js  three-mock-entry.cjs  three-mock-provider.cjs  three-mock.js  three-mock.mjs
(+96 files in other folders)
